k8s/my-cluster-3/backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: mybackend-deployment
    labels:
      app: myapp-backend
      type: backend

spec:
    template:
        metadata:
            name: mybackend-pod
            labels:
              app: myapp-backend
              type: backend
        spec:
            containers:
                - name: mybackend-container
                  image: greek96/mybackend

    replicas: 3
    
    selector:
        matchLabels:
          type: backend
