k8s/my-cluster-3/frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frontend-deploymnet
  labels:
    app: myfrontend
    type: frontend

spec:
  template:
    metadata:
      name: frontend-pod
      labels:
        app: myfrontend
        type: frontend
    spec:
      containers:
        - name: my-frontend-containers
          image: greek96/myfrontend
          tty: true
  replicas: 1

  selector:
    matchLabels:
      type: frontend
