k8s/my-cluster-3/service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service

spec:
  type: ClusterIP
  ports: 
    - targetPort: 5000
      port: 5000

  selector:
    app: myapp-backend
    type: backend
