k8s/my-cluster-3/ingress.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
    name: ingress-test-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/affinity: "cookie"
        nginx.ingress.kubernetes.io/affinity-mode: "persistent"
        nginx.ingress.kubernetes.io/session-cookie-name: "route"
        nginx.ingress.kubernetes.io/session-cookie-expires: "17280"
        nginx.ingress.kubernetes.io/session-cookie-max: "17280"
spec:
    rules:
        - http:
            paths:
                - path: /api/(.*)
                # - path: /api(/|$)(.*)
                  backend:
                    serviceName: myapp-service
                    servicePort: 5000
                - path: /?(.*)
                  backend:
                    serviceName: myapp-service-frontend
                    servicePort: 3000
